# xml

./: .travis.yml  CMakeLists.txt
CMake/: FindRE2C.cmake
example/: CMakeLists.txt  writer.cpp
include/xml/: reader.hpp  writer.hpp
src/: CMakeLists.txt  re2c.in.hpp  reader.cpp  writer.cpp
test/: CMakeLists.txt  coveralls.in  simple.cpp  simple.xml
